new noise class, better flow of data, improved noise/sonar simulation
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1382 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/doc/sonar.tex
+++ b/dangerdeep/doc/sonar.tex
@@ -339,6 +339,8 @@ To compute the total sound intensity of all frequency bands we sum them
 up multiplied by a band specific constant: $I_{total} = \sum_{i=1}^{nr\
 of\ frequency\ bands} I_{band_i} * m_{band_i}$.
 
+% fixme: add noise from own receiver!!!
+
 
 %% missing: wave interference in shallow water factor
 %% missing: convergence zones
