added comment about sonar man
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1385 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/doc/sonar.tex
+++ b/dangerdeep/doc/sonar.tex
@@ -341,6 +341,12 @@ of\ frequency\ bands} I_{band_i} * m_{band_i}$.
 
 % fixme: add noise from own receiver!!!
 
+% fixme: sonar man should not build center of two angles for result
+% reporting! because the signal strengths are symmetrical, this would give
+% much higher precision than in reality. in fact the low precision with low
+% frequencies wouldn't be simulated well! with 8° of same signal strength at
+% < 1kHz the operator would find the middle or half of 4° and report an
+% exact position anyway - not quite good.
 
 %% missing: wave interference in shallow water factor
 %% missing: convergence zones
