added/updated comments
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1455 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/todo.txt
+++ b/dangerdeep/src/todo.txt
@@ -52,3 +52,7 @@ IDEAS ABOUT WATER
 CVS
 - check that binary files have binary flag
   models/ sounds/ !
+
+- use vertex buffer objects to render water
+- use GL_USHORT for indices, saving 50% memory and possibly bandwidth.
+- VBOs should have 64k vertices max for compatibility reasons (GF4MX)
