added some comments
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1670 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/doc/codeguide.tex
+++ b/dangerdeep/doc/codeguide.tex
@@ -18,6 +18,9 @@
 % explain texture/image and the idea, basic classes like system
 % maybe rename to ``Developer's guide to DftD''
 % talk about data formats (xml), in savegames, specfiles and so on
+% talk about documentation: doxygen, many, many things missing here.
+% draw some uml diagrams for the important classes (subsection of full graph) and embed
+%  them here as eps graphics.
 
 \chapter{A guide to the sourcecode of \dftd}
 
